--- a/benchmarks/package.json
+++ b/benchmarks/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "asc ./assembly/index.ts -o dist/perf.wasm",
+    "build": "asc ./assembly/index.ts -o dist/perf.wasm -O3 --noAssert",
     "build:debug": "asc ./assembly/index.ts -o dist/perf-debug.wasm -t dist/perf-debug.wat --debug --sourceMap",
     "start:debug": "env DEBUG=1 node index.js",
     "start": "node index.js"
